save and load model

--- a/Machine_Learning_part/models_preprocessing.ipynb
+++ b/Machine_Learning_part/models_preprocessing.ipynb
@@ -3068,13 +3068,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
+   "id": "cfdf878d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current working directory: C:\\Users\\Nour Shosharah\\AppData\\Local\\Programs\\Microsoft VS Code\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "print(\"Current working directory:\", os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "id": "3ce8619c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True,  True,  True,  True,  True, False,  True,\n",
+       "        True,  True,  True,  True,  True, False, False,  True, False,\n",
+       "       False, False, False,  True,  True,  True,  True,  True, False,\n",
+       "        True, False,  True,  True,  True,  True,  True,  True,  True,\n",
+       "       False,  True,  True,  True,  True,  True, False,  True,  True,\n",
+       "        True,  True,  True,  True,  True, False,  True, False,  True,\n",
+       "        True, False, False,  True, False,  True, False,  True,  True,\n",
+       "        True,  True, False, False,  True,  True,  True,  True, False,\n",
+       "        True,  True,  True,  True,  True,  True,  True, False, False,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True, False,\n",
+       "        True, False, False,  True,  True,  True, False,  True, False,\n",
+       "        True,  True,  True, False,  True, False,  True, False,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True, False, False,  True, False])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "with open ()"
+    "with open (\"DecisionTree_mode.pkl\", 'rb') as f:\n",
+    "    loaded_model=pickle.load(f)\n",
+    "y_pred=loaded_model.predict(X_test)\n",
+    "y_pred"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80c4eb7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
